--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -26,7 +26,9 @@
     text-decoration: underline;
     user-select: none;
     margin-bottom: 2rem;
+    margin-top: 1rem;
     align-self: center;
+    color: #000000;
 }
 
 .login-form{
