--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none !important;
+}
