--- a/src/components/TableComponent.css
+++ b/src/components/TableComponent.css
@@ -93,16 +93,8 @@
 
 /* Delete Button */
 .delete-btn {
-    background-color: #e74c3c;
+    background-color: transparent;
+    outline: none;
     border: none;
-    color: white;
-    padding: 8px 12px;
-    font-size: 14px;
-    border-radius: 6px;
     cursor: pointer;
-    transition: background 0.3s ease;
-}
-
-.delete-btn:hover {
-    background-color: #c0392b;
 }
