--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,7 +4,7 @@
   width: 100%;
   background-color: #fff;
   padding: 10px 20px;
-  border-bottom: 1px solid #CCCCCC;
+  /* border-bottom: 1px solid #CCCCCC; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -22,8 +22,8 @@
 }
 
 .left-side img {
-  width: 3rem;
-  height: 3remn;
+  /* width: 3rem; */
+  height: 2.5rem;
 }
 
 .right-side {
