--- a/src/components/CardAdd.css
+++ b/src/components/CardAdd.css
@@ -4,18 +4,19 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
-    padding: 2rem;
-    border-radius: 20px;
+    gap: .5rem;
+    padding: 1rem;
+    border-radius: 0.75rem;
     text-align: center;
-    width: 20rem;
+    min-width: 12rem;
+    min-height: 12rem;
     border: none;
     cursor: pointer;
 }
 
 
 .plus-icon {
-    width: 10rem;
-    height: 10rem;
+    width: 8rem;
+    height: 8rem;
     filter: drop-shadow(rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset) drop-shadow(rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset);
 }
