--- a/src/components/InfoCard.css
+++ b/src/components/InfoCard.css
@@ -1,77 +1,68 @@
-.edit-card {
+
+.edit-card{
     background-color: #FFE8E1;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: .5rem;
+    gap: 1rem;
+    padding: 2rem;
+    border-radius: 20px;
     text-align: center;
-    min-width: 12rem;
-    min-height: 12rem;
+    width: 20rem;
     position: relative;
-    border-radius: 0.75rem;
-    padding: 1rem;
 }
 
-.truncate-link {
+.truncate-link{
     display: inline-block;
-    max-width: 13rem;
+    max-width: 18rem;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     text-decoration: none;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 400;
     color: #7D5EDB;
 }
 
-.timing {
-    font-size: 10px;
+.timing{
+    font-size: 14px;
     font-weight: 400;
-    color: #4b5563;
+    color: #414141;
 }
 
-.edit-btn {
+.edit-btn{
     position: absolute;
-    top: .5rem;
-    right: .5rem;
+    top: 1rem;
+    right: 1rem;
     border: none;
     cursor: pointer;
 }
 
-.first-letter {
+.first-letter{
     background: linear-gradient(#EFA280, #DF6229);
-    height: 4rem;
-    width: 4rem;
+    height: 8rem;
+    width: 8rem;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
 }
 
-.first-letter>span {
-    font-size: 2rem;
+.first-letter > span{
+    font-size: 4rem;
     font-weight: 400;
     color: #ffffff;
     text-transform: uppercase;
 }
 
-.title {
-    color: #333;
-    font-size: 16px;
-    font-weight: 600;
+.title{
+    color: #000000;
+    font-size: 24px;
+    font-weight: 500;
 }
 
-.sub-title {
-    font-size: 12px;
-    font-weight: 400;
-}
-
-/* Responsive design */
-@media (max-width: 521px) {
-
-    .edit-card,
-    .card-add {
-        width: 100%;
-    }
+.sub-title{
+    font-size: 14px;
+    font-weight: 500;
 }
