--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -7,6 +7,7 @@
   box-shadow: 0 0 10px #00000014;
   position: relative;
   height: 100%;
+  padding: 10px 0;
 }
 
 .sidebar.collapsed {
@@ -40,7 +41,7 @@
   margin: 0;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: .5rem;
 }
 
 li {
@@ -76,8 +77,6 @@ a:hover,
 .submenu {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  margin-top: 1rem;
 }
 
 .submenu li {
@@ -147,7 +146,7 @@ a:hover,
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: .5rem;
 }
 
 .hover-submenu {
