--- a/src/components/TableComponent.css
+++ b/src/components/TableComponent.css
@@ -1,7 +1,7 @@
-.table-container2 {
+.table-container {
     overflow-x: auto;
     background-color: #1f1f1f;
-    padding: 24px;
+    padding: 12px;
     background-color: #f9f9f9;
     border-radius: 12px;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.05);
@@ -20,7 +20,7 @@
 
 .menu-table th,
 .menu-table td {
-    padding: 14px 16px;
+    /* padding: 8px 10px; */
     text-align: left;
     border: 1px solid #eee;
     vertical-align: middle;
@@ -41,10 +41,10 @@
 .menu-table input[type="text"],
 .menu-table select {
     width: 100%;
-    padding: 10px 12px;
+    padding: 8px 10px;
     border: 1px solid #ccc;
     border-radius: 6px;
-    font-size: 14px;
+    font-size: 12px;
     background-color: #fefefe;
     outline: none;
     transition: border-color 0.3s ease;
@@ -70,9 +70,9 @@
 .image-upload label {
     background-color: #3d3d3d;
     color: #fff;
-    padding: 8px 14px;
+    padding: 6px 8px;
     border-radius: 6px;
-    font-size: 13px;
+    font-size: 12px;
     cursor: pointer;
     display: inline-block;
     transition: background 0.3s ease;
