--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,29 @@
   box-sizing: border-box;
 }
 
-
+/* All scrollbars */
 ::-webkit-scrollbar {
   width: 3px;
+  /* Vertical scrollbar width */
+  height: 3px;
+  /* Horizontal scrollbar height */
 }
 
+/* Scrollbar thumb (the draggable part) */
 ::-webkit-scrollbar-thumb {
   background-color: #F05756;
 }
+
+/* Only horizontal scrollbar */
+::-webkit-scrollbar:horizontal {
+  height: 3px;
+}
+
+/* Optional: style the track (the background of the scrollbar) */
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
 
 /* html {
   transform: scale(0.8);
@@ -36,4 +51,69 @@ code {
 
 .hide-scrollbar::-webkit-scrollbar {
   display: none !important;
+}
+
+
+.status {
+  border-radius: 20px;
+  color: white;
+  font-size: 10px;
+  font-weight: 400;
+  padding: 6px 8px;
+}
+
+.active {
+  background-color: #01CE56 !important;
+  text-transform: uppercase !important;
+}
+
+.inactive {
+  background-color: red;
+  text-transform: uppercase;
+}
+
+.inputs-container {
+  display: flex;
+  width: 100%;
+  margin-top: 1rem;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.inputs-row {
+  display: flex;
+  gap: 1%;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.inputs-row>.input-field,
+.inputs-row>.select-input {
+  width: 49%;
+}
+
+.action-btns-container {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: flex-end;
+  margin-top: 1rem;
+}
+
+.checkbox-container{
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+
+@media (max-width: 768px) {
+
+  .inputs-row>.input-field,
+  .inputs-row>.select-input {
+    width: 100%;
+  }
+
+  .inputs-row {
+    gap: 1rem;
+  }
 }
