--- a/src/pages/Brand.css
+++ b/src/pages/Brand.css
@@ -1,45 +1,5 @@
 .cards-container {
-    background-color: #ffffff;
-    padding: 1rem;
     display: flex;
+    gap: .5rem;
     flex-wrap: wrap;
-    gap: 1rem;
-    border-radius: 25px;
-    margin-top: 1rem;
-}
-
-.inputs-container {
-    display: flex;
-    flex-direction: column;
-}
-
-.inputs-row {
-    display: flex;
-    width: 100%;
-}
-
-.inputs-row .input-field {
-    flex: 1;
-    padding: 10px;
-}
-
-.input-field input, .input-field select{
-    border-radius: 10px;
-}
-
-
-.inputs-row:has(:only-child) {
-    justify-content: flex-start;
-}
-
-.action-btns-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    margin-top: 1rem;
-}
-
-.action-btns-container > button{
-    padding: .7rem 2rem !important;
 }
