--- a/src/pages/Menu.css
+++ b/src/pages/Menu.css
@@ -1,49 +1,75 @@
-.edit-menu{
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 2;
-    background-color: #ffffff;
-    overflow-y: scroll;
-    display: flex;
-    flex-direction: column;
+.edit-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  background-color: #ffffff;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
 }
 
-.edit-menu .top-bar{
-    background-color: whitesmoke;
-    width: 100%;
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    /* justify-content: center; */
-    gap: 1rem;
-    justify-content: space-between;
-    position: sticky;
-    top: 0;
-    left: 0;
-    right: 0;
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+.edit-menu .top-bar {
+  background-color: whitesmoke;
+  width: 100%;
+  padding: 1rem;
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
 }
 
-.bottom-bar{
-    background-color: whitesmoke;
-    width: 100%;
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: sticky;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+.edit-menu .top-bar > div{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: .5rem;
 }
 
-.edit-menu > .tables{
-    display: flex;
-    flex: 1;
+.edit-menu .top-bar .form-actions {
+  display: flex;
+  gap: .5rem;
+  align-items: center;
+}
+
+.edit-menu .top-bar .search-container {
+  flex: 1;
+  display: flex;
+}
+
+.edit-menu .top-bar .search-container input {
+  border-radius: 20px;
+  flex: 1;
+}
+
+.bottom-bar {
+  background-color: whitesmoke;
+  width: 100%;
+  padding: 1rem;
+  position: sticky;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.edit-menu>.tables {
+  display: flex;
+  flex: 1;
 }
 
 .file-upload {
@@ -57,16 +83,6 @@
   display: none;
 }
 
-.search-container{
-    flex: 1;
-    display: flex;
-}
-
-.search-container input{
-    border-radius: 20px;
-    max-width: 50%;
-}
-
 .custom-file-label {
   display: flex;
   align-items: center;
@@ -75,6 +91,7 @@
   overflow: hidden;
   cursor: pointer;
   font-size: 14px;
+  max-width: 6rem;
 }
 
 .custom-file-label .file-name {
@@ -92,4 +109,20 @@
   color: #fff;
   padding: 8px 14px;
   font-weight: 500;
+  display: none;
+}
+
+@media (max-width: 520px) {
+  .edit-menu .top-bar{
+    justify-content: flex-end;
+    padding: .5rem;
+  }
+
+  .bottom-bar{
+    padding: .5rem;
+  }
+
+  .edit-menu .top-bar .top-bar-top{
+    width: 100%;
+  }
 }
