--- a/src/pages/Tax.css
+++ b/src/pages/Tax.css
@@ -1,22 +1,20 @@
-
-
-.table-container{
-    margin-top: 2rem;
+.add-new-staff-info{
+    padding-top: 1rem;
 }
 
 .table-container td, .table-container th{
-    padding: 1rem;
+    padding: .8rem;
     text-align: center;
+    font-size: 14px;
 }
 
-
-/* .center-div{
-} */
-
+.table-container td{
+    font-size: 12px;
+}
 
 .table-container .tax-action-btns{
     display: flex;
-    gap: 1rem;
+    gap: .5rem;
     align-items: center;
 }
 
@@ -24,13 +22,4 @@
     border: none;
     background: transparent;
     cursor: pointer;
-}
-
-.checkbox-container{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-top: 1rem;
-    padding-left: .5rem;
-    margin-bottom: 1rem;
 }
